; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/arm/extr_hevcdsp_init_neon.c_ff_hevc_sao_band_filter_neon_8_wrapper.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/arm/extr_hevcdsp_init_neon.c_ff_hevc_sao_band_filter_neon_8_wrapper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_hevc_sao_band_filter_neon_8_wrapper(i32* %0, i32* %1, i32 %2, i32 %3, i32* %4, i32 %5, i32 %6, i32 %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca [32 x i32], align 16
  %20 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32* %4, i32** %13, align 8
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store i32 %7, i32* %16, align 4
  %21 = load i32*, i32** %9, align 8
  store i32* %21, i32** %17, align 8
  %22 = load i32*, i32** %10, align 8
  store i32* %22, i32** %18, align 8
  %23 = bitcast [32 x i32]* %19 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %23, i8 0, i64 128, i1 false)
  store i32 0, i32* %20, align 4
  br label %24

24:                                               ; preds = %40, %8
  %25 = load i32, i32* %20, align 4
  %26 = icmp slt i32 %25, 4
  br i1 %26, label %27, label %43

27:                                               ; preds = %24
  %28 = load i32*, i32** %13, align 8
  %29 = load i32, i32* %20, align 4
  %30 = add nsw i32 %29, 1
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i32, i32* %28, i64 %31
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* %20, align 4
  %35 = load i32, i32* %14, align 4
  %36 = add nsw i32 %34, %35
  %37 = and i32 %36, 31
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds [32 x i32], [32 x i32]* %19, i64 0, i64 %38
  store i32 %33, i32* %39, align 4
  br label %40

40:                                               ; preds = %27
  %41 = load i32, i32* %20, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %20, align 4
  br label %24

43:                                               ; preds = %24
  %44 = load i32*, i32** %17, align 8
  %45 = load i32*, i32** %18, align 8
  %46 = load i32, i32* %11, align 4
  %47 = load i32, i32* %12, align 4
  %48 = load i32, i32* %15, align 4
  %49 = load i32, i32* %16, align 4
  %50 = getelementptr inbounds [32 x i32], [32 x i32]* %19, i64 0, i64 0
  %51 = call i32 @ff_hevc_sao_band_filter_neon_8(i32* %44, i32* %45, i32 %46, i32 %47, i32 %48, i32 %49, i32* %50)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @ff_hevc_sao_band_filter_neon_8(i32*, i32*, i32, i32, i32, i32, i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
